# python-type

./: LICENSE  README.md  UserGuide.md  __init__.py  check_type.py  interface.py  pyproject.toml  python-type.py  tareas.txt  todo.py
