[build-system]
requires = ["setuptools>=77.0.3", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "python-type"
version = "1.0.0"
authors = [{ name="Daaviid8", email="davidcortes1999@gmail.com" }]
description = "A powerful and flexible Python decorator library for runtime type validation using type hints and custom type specifications."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICENSE"]
